# Fuji

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conanfile.py  premake5.lua
include/: fuji.h
sandbox/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
sandbox/src/: fuji-sandbox.cpp  fuji-sandbox.h  main.cpp
src/: fuji.cpp  main.cpp
src/Application/: core.cpp  core.h
src/Core/: core.cpp  core.h  window.cpp  window.h
src/Fuji/: core.cpp  core.h  window.cpp  window.h
src/Fuji/shaders/: build.bat
